--- a/lab/lm/benchmarks/BUILD
+++ b/lab/lm/benchmarks/BUILD
@@ -1,18 +1,18 @@
 cc_test(
-    name = 'main',
+    name = "main",
+    size = "small",
     srcs = [
-        'benchmarks.cc',
-        'benchmarks.hpp',
+        "benchmarks.cc",
+        "benchmarks.hpp",
     ],
     copts = [
-        '-Ilab/lm/include',
-        '-Isrc/phd/include',
-        '-Iexternal/gtest/include',
-        '-Iexternal/benchmark/include',
+        "-Ilab/lm/include",
+        "-Isrc/phd/include",
+        "-Iexternal/gtest/include",
+        "-Iexternal/benchmark/include",
     ],
     deps = [
-        '//lab/lm:main',
-        '//src/phd:main',
+        "//lab/lm:main",
+        "//src/phd:main",
     ],
-    size = 'small',
 )
