--- a/lab/lm/tests/BUILD
+++ b/lab/lm/tests/BUILD
@@ -1,19 +1,19 @@
 cc_test(
-    name = 'main',
+    name = "main",
+    size = "small",
     srcs = [
-        'lm.cc',
-        'meta-math.cc',
-        'tests.hpp',
+        "lm.cc",
+        "meta-math.cc",
+        "tests.hpp",
     ],
     copts = [
-        '-Ilab/lm/include',
-        '-Isrc/phd/include',
-        '-Iexternal/gtest/include',
-        '-Iexternal/benchmark/include',
+        "-Ilab/lm/include",
+        "-Isrc/phd/include",
+        "-Iexternal/gtest/include",
+        "-Iexternal/benchmark/include",
     ],
     deps = [
-        '//lab/lm:main',
-        '//src/phd:main',
+        "//lab/lm:main",
+        "//src/phd:main",
     ],
-    size = 'small',
 )
