--- a/learn/atcxx/BUILD
+++ b/learn/atcxx/BUILD
@@ -1,92 +1,92 @@
 cc_binary(
-    name = 'arrays',
-    srcs = ['arrays.cc']
+    name = "arrays",
+    srcs = ["arrays.cc"],
 )
 
 cc_binary(
-    name =  'benchmark-argument-type',
-    srcs = ['benchmark-argument-type.cc'],
-    copts = ['-Iexternal/benchmark/include'],
-    deps = ['@benchmark//:main'],
-    linkopts = ['-pthread'],
+    name = "benchmark-argument-type",
+    srcs = ["benchmark-argument-type.cc"],
+    copts = ["-Iexternal/benchmark/include"],
+    linkopts = ["-pthread"],
+    deps = ["@benchmark//:main"],
 )
 
 cc_test(
-    name =  'constructors',
-    srcs = ['constructors.cc'],
-    copts = ['-Iexternal/gtest/include'],
-    deps = ['@gtest//:main'],
-    size = 'small',
+    name = "constructors",
+    size = "small",
+    srcs = ["constructors.cc"],
+    copts = ["-Iexternal/gtest/include"],
+    deps = ["@gtest//:main"],
 )
 
 cc_binary(
-    name = 'fork',
-    srcs = ['fork.cc'],
+    name = "fork",
+    srcs = ["fork.cc"],
 )
 
 cc_binary(
-    name = 'functional',
-    srcs = ['functional.cc'],
+    name = "functional",
+    srcs = ["functional.cc"],
 )
 
 cc_binary(
-    name = 'hash_map',
+    name = "hash_map",
     srcs = [
-        'hash_map.cc',
-        'hash_map.h',
+        "hash_map.cc",
+        "hash_map.h",
     ],
 )
 
 cc_binary(
-    name = 'inheritance',
-    srcs = ['inheritance.cc'],
+    name = "inheritance",
+    srcs = ["inheritance.cc"],
 )
 
 cc_binary(
-    name =  'lambdas',
-    srcs = ['lambdas.cc'],
-    copts = ['-Iexternal/benchmark/include'],
-    deps = ['@benchmark//:main'],
-    linkopts = ['-pthread'],
+    name = "lambdas",
+    srcs = ["lambdas.cc"],
+    copts = ["-Iexternal/benchmark/include"],
+    linkopts = ["-pthread"],
+    deps = ["@benchmark//:main"],
 )
 
 cc_test(
-    name = 'meta',
-    srcs = ['meta.cc'],
-    size = 'small',
+    name = "meta",
+    size = "small",
+    srcs = ["meta.cc"],
 )
 
 cc_binary(
-    name = 'myvector',
-    srcs = ['myvector.cc'],
+    name = "myvector",
+    srcs = ["myvector.cc"],
 )
 
 cc_binary(
-    name = 'size-of',
-    srcs = ['size-of.cc'],
+    name = "size-of",
+    srcs = ["size-of.cc"],
 )
 
 cc_binary(
-    name = 'smart-ptr',
-    srcs = ['smart-ptr.cc'],
+    name = "smart-ptr",
+    srcs = ["smart-ptr.cc"],
 )
 
 cc_binary(
-    name = 'strings',
-    srcs = ['strings.cc'],
+    name = "strings",
+    srcs = ["strings.cc"],
 )
 
 cc_binary(
-    name = 'templates',
-    srcs = ['templates.cc'],
+    name = "templates",
+    srcs = ["templates.cc"],
 )
 
 cc_binary(
-    name = 'user-input',
-    srcs = ['user-input.cc'],
+    name = "user-input",
+    srcs = ["user-input.cc"],
 )
 
 cc_binary(
-    name = 'value-categories',
-    srcs = ['value-categories.cc'],
+    name = "value-categories",
+    srcs = ["value-categories.cc"],
 )
