--- a/learn/hoocl/BUILD
+++ b/learn/hoocl/BUILD
@@ -1,55 +1,55 @@
 cc_library(
-    name = 'shared',
-    srcs = glob(['src/*.c']),
+    name = "shared",
+    srcs = glob(["src/*.c"]),
     hdrs = glob([
-        'include/*.h',
-        'include/*.hpp',
+        "include/*.h",
+        "include/*.hpp",
     ]),
     copts = [
-        '-Ilearn/hoocl/include',
-        '-Ithird_party/opencl/include',
+        "-Ilearn/hoocl/include",
+        "-Ithird_party/opencl/include",
     ],
-    deps = ['//:opencl'],
+    deps = ["//:opencl"],
 )
 
 cc_binary(
-    name =  '001-dev-info',
-    srcs = ['001-dev-info.cc'],
+    name = "001-dev-info",
+    srcs = ["001-dev-info.cc"],
     copts = [
-        '-Ilearn/hoocl/include',
-        '-Ithird_party/opencl/include',
+        "-Ilearn/hoocl/include",
+        "-Ithird_party/opencl/include",
     ],
     linkopts = select({
-        '//:darwin': ['-framework OpenCL'],
-        '//conditions:default': ['-lOpenCL'],
+        "//:darwin": ["-framework OpenCL"],
+        "//conditions:default": ["-lOpenCL"],
     }),
-    deps = [':shared'],
+    deps = [":shared"],
 )
 
 cc_binary(
-    name =  '002-vadd',
-    srcs = ['002-vadd.c'],
+    name = "002-vadd",
+    srcs = ["002-vadd.c"],
     copts = [
-        '-Ilearn/hoocl/include',
-        '-Ithird_party/opencl/include',
+        "-Ilearn/hoocl/include",
+        "-Ithird_party/opencl/include",
     ],
     linkopts = select({
-        '//:darwin': ['-framework OpenCL'],
-        '//conditions:default': ['-lOpenCL'],
+        "//:darwin": ["-framework OpenCL"],
+        "//conditions:default": ["-lOpenCL"],
     }),
-    deps = [':shared'],
+    deps = [":shared"],
 )
 
 cc_binary(
-    name =  '003-vadd_cpp',
-    srcs = ['003-vadd_cpp.cc'],
+    name = "003-vadd_cpp",
+    srcs = ["003-vadd_cpp.cc"],
     copts = [
-        '-Ilearn/hoocl/include',
-        '-Ithird_party/opencl/include',
+        "-Ilearn/hoocl/include",
+        "-Ithird_party/opencl/include",
     ],
     linkopts = select({
-        '//:darwin': ['-framework OpenCL'],
-        '//conditions:default': ['-lOpenCL'],
+        "//:darwin": ["-framework OpenCL"],
+        "//conditions:default": ["-lOpenCL"],
     }),
-    deps = [':shared'],
+    deps = [":shared"],
 )
