--- a/src/phd/BUILD
+++ b/src/phd/BUILD
@@ -1,15 +1,15 @@
 cc_library(
     name = "main",
-    srcs = glob(['src/*.cc']),
-    hdrs = glob(['include/phd/*']),
+    srcs = glob(["src/*.cc"]),
+    hdrs = glob(["include/phd/*"]),
     copts = [
         "-Isrc/phd/include",
         "-Iexternal/gtest/include",
         "-Iexternal/benchmark/include",
     ],
-    deps = [
-        "@gtest//:main",
-        "@benchmark//:main",
-    ],
     visibility = ["//visibility:public"],
+    deps = [
+        "@benchmark//:main",
+        "@gtest//:main",
+    ],
 )
