--- a/lab/lm/BUILD
+++ b/lab/lm/BUILD
@@ -1,5 +1,5 @@
 cc_library(
-    name = 'main',
-    hdrs = glob(['include/lm/*']),
-    visibility = ['//lab/lm:__subpackages__']
+    name = "main",
+    hdrs = glob(["include/lm/*"]),
+    visibility = ["//lab/lm:__subpackages__"],
 )
