--- a/lab/stl/BUILD
+++ b/lab/stl/BUILD
@@ -1,5 +1,5 @@
 cc_library(
-    name = 'main',
-    hdrs = glob(['include/ustl/*']),
-    visibility = ['//lab/stl:__subpackages__']
+    name = "main",
+    hdrs = glob(["include/ustl/*"]),
+    visibility = ["//lab/stl:__subpackages__"],
 )
