--- a/learn/ml/BUILD
+++ b/learn/ml/BUILD
@@ -1,10 +1,10 @@
 load("@requirements//:requirements.bzl", "requirement")
 
 py_test(
-    name = 'batch_linear_regression',
-    srcs = ['batch_linear_regression.py'],
-    size = 'small',
+    name = "batch_linear_regression",
+    size = "small",
+    srcs = ["batch_linear_regression.py"],
     deps = [
         requirement("absl-py"),
-    ]
+    ],
 )
