--- a/learn/pc/BUILD
+++ b/learn/pc/BUILD
@@ -1,33 +1,34 @@
 cc_test(
-    name =  "001-fib",
+    name = "001-fib",
+    size = "small",
     srcs = ["001-fib.cc"],
     copts = [
         "-Iexternal/gtest/include",
         "-Iexternal/benchmark/include",
     ],
     deps = [
-        "@gtest//:main",
         "@benchmark//:main",
+        "@gtest//:main",
     ],
-    size = 'small',
 )
 
 cc_test(
-    name =  "002-linked-lists",
+    name = "002-linked-lists",
+    size = "small",
     srcs = ["002-linked-lists.cc"],
     copts = [
         "-Iexternal/gtest/include",
         "-Iexternal/benchmark/include",
     ],
     deps = [
-        "@gtest//:main",
         "@benchmark//:main",
+        "@gtest//:main",
     ],
-    size = 'small',
 )
 
 cc_test(
-    name =  "003-string-inc",
+    name = "003-string-inc",
+    size = "small",
     srcs = ["003-string-inc.cc"],
     copts = [
         "-Isrc/phd/include",
@@ -35,11 +36,11 @@ cc_test(
         "-Iexternal/benchmark/include",
     ],
     deps = ["//src/phd:main"],
-    size = 'small',
 )
 
 cc_test(
-    name =  "004-fractal",
+    name = "004-fractal",
+    size = "small",
     srcs = ["004-fractal.cc"],
     copts = [
         "-Isrc/phd/include",
@@ -47,16 +48,20 @@ cc_test(
         "-Iexternal/benchmark/include",
     ],
     deps = ["//src/phd:main"],
-    size = 'small',
 )
 
 cc_binary(
-    name =  "humble-001",
+    name = "humble-001",
     srcs = ["humble-001.cc"],
-    args = ['-f', '1', '-g', '2']
+    args = [
+        "-f",
+        "1",
+        "-g",
+        "2",
+    ],
 )
 
 cc_binary(
-    name =  "humble-003-vector",
+    name = "humble-003-vector",
     srcs = ["humble-003-vector.cc"],
 )
